backend-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-app:prod
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
