backend-deployment-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"app-dev"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"PORT","value":"5000"},{"name":"ENVIRONMENT","value":"dev"}],"image":"backend-app:latest","imagePullPolicy":"Never","name":"backend","ports":[{"containerPort":5000}]}]}}}}
  creationTimestamp: "2026-01-08T10:00:28Z"
  generation: 1
  name: backend
  namespace: app-qa
  resourceVersion: "12158"
  uid: 863ecf9b-dce3-4908-8a0b-be3138b2468a
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: PORT
          value: "5000"
        - name: ENVIRONMENT
          value: qa
        image: backend-app:latest
        imagePullPolicy: Never
        name: backend
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-01-08T10:00:39Z"
    lastUpdateTime: "2026-01-08T10:00:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-08T10:00:30Z"
    lastUpdateTime: "2026-01-08T10:00:39Z"
    message: ReplicaSet "backend-7559f87cf7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
