frontend-deployment-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"frontend","namespace":"app-dev"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"frontend"}},"template":{"metadata":{"labels":{"app":"frontend"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"frontend-config"}}],"image":"frontend-app:latest","imagePullPolicy":"Never","name":"frontend","ports":[{"containerPort":80,"protocol":"TCP"}]}]}}}}
  creationTimestamp: "2026-01-08T10:00:29Z"
  generation: 4
  name: frontend
  namespace: app-qa
  resourceVersion: "47499"
  uid: 5c62c9f6-848f-44f7-af6d-9f2ac54c4ba5
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-01-08T22:52:47+05:30"
      labels:
        app: frontend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: frontend-config
        image: frontend-app:qa
        imagePullPolicy: Never
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-01-08T10:00:39Z"
    lastUpdateTime: "2026-01-08T10:00:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-08T10:00:30Z"
    lastUpdateTime: "2026-01-08T17:22:51Z"
    message: ReplicaSet "frontend-b976cbc4d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
