backend-service-uat.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app-uat
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
