frontend-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app-prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
