frontend-service-qa.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app-qa
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
