frontend-service-uat.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app-uat
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
